evtree has been archived, hence data ported to klaR
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/klar@49 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -171,6 +171,11 @@ Changelog:
 - move combinat from Suggests to Imports
 - remove require calls for MASS
 
+==== release: 0.6-11
+
+- GermanCredit data copied vom evtree package which has been archived
+- depends on R >= 2.10.0
+
 
 
 To Do (at least in Uwe's opinion):
