new function cond.index
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/klar@51 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -176,6 +176,12 @@ Changelog:
 - GermanCredit data copied vom evtree package which has been archived
 - depends on R >= 2.10.0
 
+==== release: 0.6-12
+
+- new function cond.index for the "Calculation of Condition Indices for Linear Regression"
+- bugfix for NaiveBayes: predict would not work for one explan. variable
+
+
 
 
 To Do (at least in Uwe's opinion):
