bugfix for new versions of R by Karsten Luebke
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/klar@56 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -186,6 +186,7 @@ Changelog:
 - woe: speedup and extension for weighted observation (imports wtd.table from questionr)   
 - kmodes: bugfix (wrong calculation for weights) speedup (additional fast = TRUE argument) [note: works on data frames instead of matrices (cf. ln. 3/83) and characters instead of integers (cf. ln. 42/43)] 
 - corclust: extension to categorical variables (using Cramer's V); returned object now of class corclust; plot.corclust() added; cvtree() function [cutree() for variables] added that also returns within vs. between cluster correlations; additional functions cvtree() and xtractvars()   
+- NaiveBayes update for new versions of R
 
 
 
