--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -187,7 +187,7 @@ Changelog:
 - kmodes: bugfix (wrong calculation for weights) speedup (additional fast = TRUE argument) [note: works on data frames instead of matrices (cf. ln. 3/83) and characters instead of integers (cf. ln. 42/43)] 
 - corclust: extension to categorical variables (using Cramer's V); returned object now of class corclust; plot.corclust() added; cvtree() function [cutree() for variables] added that also returns within vs. between cluster correlations; additional functions cvtree() and xtractvars()   
 - NaiveBayes update for new versions of R
-
+- predict.NaiveBayes gains support for logical explanatory variables thanks to Vincent R. Nijs
 
 
 To Do (at least in Uwe's opinion):
