some MKL diffs fixed
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/klar@72 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -208,6 +208,7 @@ Changelog:
 - new version to indoicate this is pretty stable (for many years already)
 - add packages mentioned in Rd links to "Enhances" to avoid Notes
 - update test results for changes in the R graphics device
+- omit printing some lda test results to avoid eigenvector sign related diffs
 
 
 
