update, and final submission for 1.7-1
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/klar@87 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NEWS
+++ b/pkg/NEWS
@@ -217,6 +217,7 @@ Changelog:
   of (almost) identical posteriors
 - predict.NaiveBayes now handles newdata correctly if factor structure does 
   not match the training datas'
+- corclust: initialization of kor matrix fixed
 
 
 
